--- a/html-files/highbackbench.html
+++ b/html-files/highbackbench.html
@@ -8,6 +8,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <h1 class="name">The High-Back Bench</h1>
+    <p>The High-Back Bench is great for a relaxing chair.</p>
 </body>
 </html>
