changed file stuff

--- a/html-files/painting.html
+++ b/html-files/painting.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Paintings and Mattress</title>
+    <link rel="icon" type="image/x-icon" href="https://www.course-api.com/images/store/product-12.jpeg">
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <h1>DONT BUY THIS</h1>
 </body>
 </html>
