--- a/html-files/hoveringbed.html
+++ b/html-files/hoveringbed.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hovering Bed</title>
+    <link rel="icon" type="image/x-icon" href="https://www.course-api.com/images/store/product-6.jpeg">
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
 </head>
