added text to html-files

--- a/html-files/accentchairs.html
+++ b/html-files/accentchairs.html
@@ -9,6 +9,9 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <h1>Accent Chair</h1>
+    <P>This is very un-nice. do not buy this.</P>
+    <p>It's very uncomfortable</p>
+    <img src="https://www.course-api.com/images/store/product-3.jpeg" alt="" srcset="">
 </body>
 </html>
