--- a/html-files/blackcouch.html
+++ b/html-files/blackcouch.html
@@ -9,6 +9,8 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <h1>The Black Couch</h1>
+    <P>The Black couch is great and very comfy</P>
+    <img src="https://www.course-api.com/images/store/product-2.jpeg" alt="">
 </body>
 </html>
