--- a/html-files/diningtable.html
+++ b/html-files/diningtable.html
@@ -9,6 +9,9 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <h1>Dining Table</h1>
+    <P>This is very nice for a dining room.</P>
+    <p>I'm not buy it though because it's very fragile and breaks easily</p>
+    <img src="https://www.course-api.com/images/store/product-5.jpeg" alt="" srcset="">
 </body>
 </html>
