--- a/html-files/highbackbench.html
+++ b/html-files/highbackbench.html
@@ -11,5 +11,7 @@
 <body>
     <h1 class="name">The High-Back Bench</h1>
     <p>The High-Back Bench is great for a relaxing chair.</p>
+    <p>It's a great chair because it helps your back and it helps you relax.</p>
+    <img src="https://www.course-api.com/images/store/product-1.jpeg" alt="">
 </body>
 </html>
