--- a/html-files/hoveringbed.html
+++ b/html-files/hoveringbed.html
@@ -9,6 +9,9 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <h1>Hovering Bed</h1>
+    <p>This is a very nice buy.</p>
+    <p>Very scary because when you buy it, it just appears in yoour room and actually hovers</p>
+    <img src="https://www.course-api.com/images/store/product-6.jpeg" alt="" srcset="">
 </body>
 </html>
