--- a/html-files/woodentable&chairs.html
+++ b/html-files/woodentable&chairs.html
@@ -9,6 +9,9 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <h1>Wooden Table & Chairs</h1>
+    <P>These are very nice for an outside patio.</P>
+    <p>I'm not gonna buy them though. They suck.</p>
+    <img src="https://www.course-api.com/images/store/product-4.jpeg" alt="" srcset="">
 </body>
 </html>
